--- a/views/index.erb
+++ b/views/index.erb
@@ -26,7 +26,7 @@
       // The response object is returned with a status field that lets the app know the current
       // login status of the person. In this case, we're handling the situation where they 
       // have logged in to the app.
-      $.post("<%= request.host %>/login", data: {signed_request: response.authResponse.signedRequest},
+      $.post("<%= request.host %>/login", {signed_request: response.authResponse.signedRequest},
         function(response) {
           window.location = response.location;
         });
