--- a/views/index.erb
+++ b/views/index.erb
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Doom.io -- For all your doom clock needs</title>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 </head>
 <body>
 <div id="fb-root"></div>
@@ -26,10 +25,16 @@
       // The response object is returned with a status field that lets the app know the current
       // login status of the person. In this case, we're handling the situation where they 
       // have logged in to the app.
-      $.post("/login", {signed_request: response.authResponse.signedRequest},
-        function(response) {
-          window.location = response.location;
-        });
+      var form = document.createElement("form");
+      form.setAttribute("method", "post");
+      form.setAttribute("action", "login");
+      var hiddenField = document.createElement("input");
+      hiddenField.setAttribute("name", "signed_request");
+      hiddenField.setAttribute("value", response.authResponse.signed_request);
+      hiddenField.setAttribute("tyep", "hidden");
+      form.appendChild(hiddenField);
+      document.body.appendChild(form);
+      form.submit();
     } else if (response.status === 'not_authorized') {
       // In this case, the person is logged into Facebook, but not into the app, so we call
       // FB.login() to prompt them to do so. 
