Can't do anything right...

--- a/views/index.erb
+++ b/views/index.erb
@@ -30,7 +30,7 @@
       form.setAttribute("action", "login");
       var hiddenField = document.createElement("input");
       hiddenField.setAttribute("name", "signed_request");
-      hiddenField.setAttribute("value", response.authResponse.signed_request);
+      hiddenField.setAttribute("value", response.authResponse.signedRequest);
       hiddenField.setAttribute("tyep", "hidden");
       form.appendChild(hiddenField);
       document.body.appendChild(form);
