Ask for birthdate and publish actions

--- a/views/index.erb
+++ b/views/index.erb
@@ -75,6 +75,6 @@
   Learn more about options for the login button plugin:
   /docs/reference/plugins/login/ -->
 
-<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
+<fb:login-button show-faces="true" width="200" max-rows="1" scope="user_birthday,publish_actions"></fb:login-button>
 </body>
 </html>
