--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -2,70 +2,44 @@
 <html>
 <head>
   <title>Doom.io -- For all your doom clock needs</title>
+  <link href="/css/styles2.css" rel="stylesheet" type="text/css" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery.countdown.js"></script>
+  <style type="text/css">
+  .cntSeparator {
+      font-size: 54px;
+      margin: 10px 7px;
+      color: #000;
+  }
+  .desc div {
+      font-family: Arial;
+      width: 70px;
+      font-size: 13px;
+      font-weight: bold;
+      color: #000;
+  }
+  </style>
 </head>
 <body>
-<div id="fb-root"></div>
-<script>
-  window.fbAsyncInit = function() {
-  FB.init({
-    appId      : '211013692398220', // App ID
-    channelUrl : '//<%= request.host %>/channel.html', // Channel File
-    status     : true, // check login status
-    cookie     : true, // enable cookies to allow the server to access the session
-    xfbml      : true  // parse XFBML
+  <div id="wrapper">
+    <% @clocks.each do |clock| %>
+    <h2><%= clock["value"]["title"] %></h2>
+    <div id="<%= clock["key"] %>"</div>
+    <br />
+    <%end %>
+  </div>
+  <script>
+  $(document).ready(function() {
+    var _date;
+    <% @clocks.each do |clock| %>
+      _date = new Date(<%= clock["value"]["end_time"] * 1000 %>);
+      $("#<%= clock["key"] %>").countdown({
+        startTime: _date,
+        stepTime: 1,
+        image: "images/digits.png"
+      });
+    <% end %>
   });
-
-  // Here we subscribe to the auth.authResponseChange JavaScript event. This event is fired
-  // for any authentication related change, such as login, logout or session refresh. This means that
-  // whenever someone who was previously logged out tries to log in again, the correct case below 
-  // will be handled. 
-  FB.Event.subscribe('auth.authResponseChange', function(response) {
-    // Here we specify what we do with the response anytime this event occurs. 
-    if (response.status === 'connected') {
-      // The response object is returned with a status field that lets the app know the current
-      // login status of the person. In this case, we're handling the situation where they 
-      // have logged in to the app.
-    } else if (response.status === 'not_authorized') {
-      // In this case, the person is logged into Facebook, but not into the app, so we call
-      // FB.login() to prompt them to do so. 
-      // In real-life usage, you wouldn't want to immediately prompt someone to login 
-      // like this, for two reasons:
-      // (1) JavaScript created popup windows are blocked by most browsers unless they 
-      // result from direct interaction from people using the app (such as a mouse click)
-      // (2) it is a bad experience to be continually prompted to login upon page load.
-      FB.login();
-    } else {
-      // In this case, the person is not logged into Facebook, so we call the login() 
-      // function to prompt them to do so. Note that at this stage there is no indication
-      // of whether they are logged into the app. If they aren't then they'll see the Login
-      // dialog right after they log in to Facebook. 
-      // The same caveats as above apply to the FB.login() call here.
-      FB.login();
-    }
-  });
-  };
-
-  // Load the SDK asynchronously
-  (function(d){
-   var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
-   if (d.getElementById(id)) {return;}
-   js = d.createElement('script'); js.id = id; js.async = true;
-   js.src = "//connect.facebook.net/en_US/all.js";
-   ref.parentNode.insertBefore(js, ref);
-  }(document));
-
-  // Here we run a very simple test of the Graph API after login is successful. 
-  // This testAPI() function is only called in those cases. 
-</script>
-
-<!--
-  Below we include the Login Button social plugin. This button uses the JavaScript SDK to
-  present a graphical Login button that triggers the FB.login() function when clicked.
-
-  Learn more about options for the login button plugin:
-  /docs/reference/plugins/login/ -->
-
-<fb:login-button show-faces="true" width="200" max-rows="1"></fb:login-button>
+  </script>
 </body>
 </html>
