--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -24,7 +24,7 @@
   <div id="wrapper">
     <% @clocks.each do |clock| %>
     <h2><%= clock["value"]["title"] %></h2>
-    <div id="<%= clock["key"] %>"</div>
+    <div id="<%= clock["key"] %>"></div>
     <br />
     <%end %>
   </div>
