Wire up creating clocks maybe

--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -28,6 +28,13 @@
     <br />
     <%end %>
   </div>
+  <div class="newclock">
+    <form id="add_clock">
+      <input type="text" name="title" />
+      <input type="text" name="time" />
+      <input type="submit" value="Add clock" />
+    </form>
+  </div>
   <script>
   $(document).ready(function() {
     var _date;
@@ -39,7 +46,19 @@
         image: "images/digits.png"
       });
     <% end %>
+    $("#add_clock").on("submit", function() {
+      $.post("/clocks", $(this).serialize(), function(response) {
+        $("#wrapper").append("<h2>" + response["title"] + "</h2><div id='" + response["id"] + "'></div><br/>");
+        var _date = new Date(response["end_time"] * 1000);
+        $("#" + response["id"]).countdown({
+          startTime: _date,
+          stepTime: 1,
+          images: "images/digits.png"
+        });
+      });
+      return false;
+    });
   });
   </script>
 </body>
-</html>
+</html> 
