--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -53,7 +53,7 @@
         $("#" + response["id"]).countdown({
           startTime: _date,
           stepTime: 1,
-          images: "images/digits.png"
+          image: "images/digits.png"
         });
       });
       return false;
