add some form labels

--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -30,7 +30,9 @@
   </div>
   <div class="newclock">
     <form id="add_clock">
+      <label for="title">Title</label>
       <input type="text" name="title" />
+      <label for="time">When are you doomed?</label>
       <input type="text" name="time" />
       <input type="submit" value="Add clock" />
     </form>
