Screw you relative paths

--- a/views/shares.erb
+++ b/views/shares.erb
@@ -4,7 +4,7 @@
   <title>Doom.io -- For all your doom clock needs</title>
   <link href="/css/styles2.css" rel="stylesheet" type="text/css" />
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-  <script type="text/javascript" src="js/jquery.countdown.js"></script>
+  <script type="text/javascript" src="/js/jquery.countdown.js"></script>
   <style type="text/css">
   .cntSeparator {
       font-size: 54px;
