Screw you relative paths

--- a/views/shares.erb
+++ b/views/shares.erb
@@ -36,7 +36,7 @@
       $("#<%= clock["key"] %>").countdown({
         startTime: _date,
         stepTime: 1,
-        image: "images/digits.png"
+        image: "/images/digits.png"
       });
     <% end %>
   });
