We're doom.io now

--- a/views/dashboard.erb
+++ b/views/dashboard.erb
@@ -21,7 +21,7 @@
   </style>
 </head>
 <body>
-  <span>Share with your friends! https://doomio.herokuapp.com/shares/<%= @user["share_id"] %></span>
+  <span>Share with your friends! http://www.doom.io/shares/<%= @user["share_id"] %></span>
   <div id="wrapper">
     <% @clocks.each do |clock| %>
     <h2><%= clock["value"]["title"] %></h2>
